--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,14 +17,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image
-        # run: |
-        #   docker build -t ghcr.io/dclguru/mml:latest .
-        #   docker push ghcr.io/dclguru/mml:latest
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile
           push: true
           tags: |
-            ghcr.io/dclguru/mml:latest
-            ghcr.io/dclguru/mml:${{ github.sha }}
+            ghcr.io/BrewFourtyTwo/mml:latest
+            ghcr.io/BrewFourtyTwo/mml:${{ github.sha }}
