--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,3 +31,17 @@ jobs:
           tags: |
             ghcr.io/brewfourtytwo/mml:latest
             ghcr.io/brewfourtytwo/mml:${{ github.sha }}
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push-image
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Docker Stack Deploy
+        uses: cssnr/stack-deploy-action@v1
+        with:
+          name: mml
+          file: docker-stack.yaml
+          host: ${{ secrets.SSH_HOST }}
+          user: ${{ secrets.SSH_USER }}
+          ssh_key: ${{ secrets.SSH_KEY }}
