--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "rimraf": "5.0.7",
     "typescript": "5.4.5",
     "tsx": "4.10.2"
+  },
+  "dependencies": {
+    "ethers": "^6.11.1",
+    "@metamask/providers": "^14.0.2"
   }
 }
