--- a/packages/web-client/tsconfig.json
+++ b/packages/web-client/tsconfig.json
@@ -4,7 +4,10 @@
     "module": "esnext",
     "target": "es2022",
     "jsx": "react",
-    "lib": ["es2022", "dom"],
+    "lib": [
+      "es2022",
+      "dom"
+    ],
     "sourceMap": true,
     "allowJs": true,
     "strictNullChecks": true,
@@ -18,5 +21,8 @@
     "baseUrl": ".",
     "skipLibCheck": true
   },
-  "include": ["./src/**/*.ts*"]
+  "include": [
+    "./src/**/*.ts*",
+    "src/MetaMaskAuth.ts"
+  ]
 }
